[gd_scene load_steps=11 format=2]

[ext_resource path="res://res/UI/game_over_page_small.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GameOver.gd" type="Script" id=2]
[ext_resource path="res://res/fonts/fixedsys.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://res/sound/sound effects/game.sound.rocket.explode.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 3 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="GameOverPageSmall" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Button" type="Button" parent="."]
margin_left = 119.0
margin_top = 574.0
margin_right = 398.0
margin_bottom = 638.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 295.0
margin_top = 137.0
margin_right = 367.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="BestScore" type="Label" parent="."]
margin_left = 294.0
margin_top = 224.0
margin_right = 366.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="AsteroidsDefeated" type="Label" parent="."]
margin_left = 499.0
margin_top = 313.0
margin_right = 571.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="CrashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
